--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/archive/6011/final_review/drill_1.html"
+    "livePreview.defaultPreviewPath": "/cookbook/recipes.html"
 }
